@@ -2,6 +2,8 @@
 0.0.65
 ========================
 
+- fixed TextDB output when `TextDB.paginate()` without sorting
+
 ========================
 0.0.64
 ========================
